# ZenFabrique

./: .gitignore  README.md  docker-compose.yml
config/: fabric.yaml
config/fuseki/: zenfabrique.ttl
control-plane/ontology/: streaming-event.ttl
control-plane/shacl/: streaming-event-shape.ttl
docs/architecture/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_OVERVIEW.md
docs/planning/: ROADMAP.md  STATUS.md
docs/testing/: self-healing-adversarial-matrix.md
orchestrator/: Cargo.toml
orchestrator/src/: amqp.rs  config.rs  fhe.rs  ingest.rs  main.rs  opa.rs  rdf.rs  shacl.rs  shim.rs  telemetry.rs  validate.rs
policy-plane/rego/: schema_mutation.rego
privacy-plane/fhe/: Dockerfile  app.py
ui/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
ui/src/: App.svelte  TerminalConsole.svelte  TerminalConsole.test.js
