[package]
name = "zenfabrique-orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenfabrique-orchestrator"
path = "src/main.rs"

[dependencies]
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"]  }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2"
base64 = "0.22"
duckdb = { version = "1", features = ["bundled", "json"] }
lapin = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
futures-lite = "2"
futures-util = "0.3"
tokio-tungstenite = "0.24"